--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <section class="background-image">
-      <p class="orange-color">1</p>
+      <p class="orange-color">.</p>
 
       <nav class="navbar navbar-expand-lg bg-body-transparent">
         <div class="container-fluid">
@@ -102,7 +102,24 @@
         </div>
       </div>
       <div class="cammunity-text">
-        <p class="text-center">Hear what’s trending for free in the SoundCloud community</p>
+        <p class="text-center">
+          Hear what’s trending for free in the SoundCloud community
+        </p>
+      </div>
+
+      <div class="audio-container">
+        <img
+          src="./assets/295.jpg"
+          alt="Song Thumbnail"
+          height="300px"
+          width="300px"
+        />
+      </div>
+      <div class="audio-control">
+        <audio controls>
+          <source src="./assets/295.mp3" type="audio/mpeg" />
+          Your browser does not support the audio element.
+        </audio>
       </div>
     </section>
 
