--- a/index.html
+++ b/index.html
@@ -155,7 +155,6 @@
         </div>
       </div>
 
-
       <div class="audio-tracks-2">
         <div class="audio-container">
           <img src="./assets/Bella-ciao.jpg" alt="Song Thumbnail" />
@@ -172,7 +171,10 @@
 
           <div class="audio-control">
             <audio controls>
-              <source src="./assets/Gaddi-Neevi-Ji-Karaoke.mp3" type="audio/mpeg" />
+              <source
+                src="./assets/Gaddi-Neevi-Ji-Karaoke.mp3"
+                type="audio/mpeg"
+              />
               Your browser does not support the audio element.
             </audio>
           </div>
@@ -190,10 +192,7 @@
         </div>
 
         <div class="audio-container">
-          <img
-            src="./assets/ya-jism.jpg"
-            alt="Song Thumbnail"
-          />
+          <img src="./assets/ya-jism.jpg" alt="Song Thumbnail" />
 
           <div class="audio-control">
             <audio controls>
@@ -211,8 +210,41 @@
       </div>
     </section>
 
-
     <section class="section-3">
+      <div class="mobile-sec">
+        <div class="mobile-image">
+          <img src="./assets/mobileimage.png" alt="" />
+        </div>
+
+        <div class="mobile-image-text">
+          <p class="never-stop">Never stop listening</p>
+          <div class="hline"></div>
+          <p class="xbox-one">
+            SoundCloud is available on <br />
+            Web, iOS, Android, Sonos, <br />
+            Chromecast, and Xbox One.
+          </p>
+          <a href=""><img src="./assets/apple.png" alt="" width="120px" /></a>
+          <a href=""><img src="./assets/google.png" alt="" width="120px" /></a>
+        </div>
+      </div>
+    </section>
+
+
+    <section class="section-4">
+      <div class="calling-creators">
+        <div>
+        <h2 class="text-white">Calling all creators</h2>
+        </div>
+        <div>
+          <p class="text-white">Get on SoundCloud to connect with fans, share <br> your sounds, and grow your audience. What are <br> you waiting for?</p>
+        </div>
+        <div>
+          <button type="button" class="btn button-brand btn-outline-light">
+            Find Out More
+          </button>
+        </div>
+      </div>
 
     </section>
 
