--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
 
 
     <section class="section-4">
+      <div class="section-4-d">
       <div class="calling-creators">
         <div>
         <h2 class="text-white">Calling all creators</h2>
@@ -245,6 +246,19 @@
           </button>
         </div>
       </div>
+      <div class="sidhu-pic">
+        <img src="./assets/sidhu-removebg-preview.png" alt="" >
+      </div>
+
+      <div class="sidhu-text">
+        <h3 class="text-center">Sidhu Moose <br> Wala</h3>
+      </div>
+
+    </div>
+
+    </section>
+
+    <section class="section-5">
 
     </section>
 
