--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>soundcloud.com</title>
+    <link rel="icon" type="image/x-icon" href="./assets/soundcloud-logo-.png">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -82,6 +84,7 @@
     </section>
 
     <section class="section-2">
+     
       <div class="search-bar-button">
         <form class="search-container">
           <input
@@ -259,6 +262,35 @@
     </section>
 
     <section class="section-5">
+<div class="Thanks-for-listing">
+  <h2 class="text-center">Thanks for listening. Now join in.</h2>
+  <p class="text-center save-tracks">Save tracks, follow artists and build playlists. All for free.</p>
+</div>
+
+<div class="text-center">
+  <button type="button" class="btn btn-brand-5 btn-lg">
+   Create Accunt
+  </button>
+</div>
+<div class="alread-account">
+  <div class="text-center">
+    <p>Already have an account?</p>
+  </div>
+  <div>
+<button><a href="">Sign In</a></button>
+  </div>
+</div>
+
+<div class="fline"></div>
+
+<div class="footer-paragraph">
+  <p class="footer-p-first">Directory -</p> <p class="footer-p"> About us - </p><p class="footer-p"> Artist Resources -</p><p class="footer-p"> Blog -</p><p class="footer-p"> Jobs -</p><p class="footer-p">Developers -</p><p class="footer-p">Help -</p><p class="footer-p">Legal -</p><p class="footer-p">Privacy -</p><p class="footer-p">Cookie Policy -</p><p class="footer-p">Consent Manager -</p><p class="footer-p">Imprint -</p><p class="footer-p">Charts</p>
+</div>
+
+<div class="language"><p><span>Language:</span> English (US)</p></div>
+
+
+
 
     </section>
 
