--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
           </div>
         </div>
 
-        <div class="audio-container">
+        <div class="audio-container-2">
           <img src="./assets/still-rollin.jpg" alt="Song Thumbnail" />
 
-          <div class="audio-control">
+          <div class="audio-control-2">
             <audio controls>
               <source
                 src="./assets/Gaddi-Neevi-Ji-Karaoke.mp3"
@@ -183,10 +183,10 @@
           </div>
         </div>
 
-        <div class="audio-container">
+        <div class="audio-container-2">
           <img src="./assets/we-rollin.jpg" alt="Song Thumbnail" />
 
-          <div class="audio-control">
+          <div class="audio-control-2">
             <audio controls>
               <source src="./assets/we-rolllin.mp3" type="audio/mpeg" />
               Your browser does not support the audio element.
@@ -194,10 +194,10 @@
           </div>
         </div>
 
-        <div class="audio-container">
+        <div class="audio-container-2">
           <img src="./assets/ya-jism.jpg" alt="Song Thumbnail" />
 
-          <div class="audio-control">
+          <div class="audio-control-2">
             <audio controls>
               <source src="./assets/ya-jism.mp3" type="audio/mpeg" />
               Your browser does not support the audio element.
