--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-              <button type="button" class="btn button-brand btn-outline-light">
-                Sign in
-              </button>
+             <a href="./login.html"> <button type="button" class="btn button-brand btn-outline-light">
+              Sign in
+            </button></a>
 
               <button
                 type="button"
@@ -293,6 +293,7 @@
 
 
     </section>
+
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
