--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
               Sign in
             </button></a>
 
-              <button
+            <a href="./sign-up.html"> <button
                 type="button"
                 class="btn btn-brand"
                 style="
-                  --bs-btn-padding-y: 5px;
+                  --bs-btn-padding-y: 7px;
                   --bs-btn-padding-x: 1.5rem;
                   --bs-btn-font-size: 14px;
                 "
               >
-                Create accunt
-              </button>
+             Create accunt
+              </button>  </a> 
               <li class="nav-item">
                 <a class="nav-link" href="#">for Artists</a>
               </li>
@@ -75,9 +75,9 @@
               from emerging and major artists around the world.
             </p>
 
-            <button type="button" class="btn btn-brand-3 btn-lg">
+            <a href="./sign-up.html"><button type="button" class="btn btn-brand-3 btn-lg">
               Sign up for free
-            </button>
+            </button></a>
           </div>
         </div>
       </div>
