--- a/login.html
+++ b/login.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Log in</title>
+    <link rel="icon" type="image/x-icon" href="./assets/soundcloud-logo-.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 <link rel="stylesheet" href="./css/login.css">  
 </head>
@@ -11,7 +12,7 @@
     
     <div class="bg-img">
         <div class="content">
-          <header>Login Form</header>
+          <header>Login Now</header>
           <form action="#">
             <div class="field">
               <span class="fa fa-user"></span>
@@ -39,7 +40,7 @@
             </div>
           </div>
           <div class="signup">Don't have account?
-            <a href="#">Signup Now</a>
+            <a href="./sign-up.html">Sign up Now</a>
           </div>
         </div>
       </div>
