--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
              Create accunt
               </button>  </a> 
               <li class="nav-item">
-                <a class="nav-link" href="#">for Artists</a>
+                <a class="nav-link" href="./for-Artists.html">for Artists</a>
               </li>
             </ul>
           </div>
