--- a/for-Artists.html
+++ b/for-Artists.html
@@ -105,12 +105,54 @@
               Not by just anyone, but an audience and community of 150 million
               plus tastemakers…the day one early adopters that come to
               SoundCloud to discover and launch the careers of artists like
-             <span class="text-white billie-eilish">Billie Eilish, Post Malone, Lil Nas X</span>  and beyond.
+              <span class="text-white billie-eilish"
+                >Billie Eilish, Post Malone, Lil Nas X</span
+              >
+              and beyond.
             </p>
           </div>
         </div>
       </div>
+
+      <div class="container-fluid marquee-items d-none d-sm-block">
+        <div class="row">
+          <div class="col">
+            <marquee width="100%" direction="Right" height="100px" play="auto">
+              <h4 class="text-white">
+                BUILD UP YOUR MUSIC&nbsp;&nbsp;
+                <img
+                  src="./assets/for-artists/marki-logo-removebg-preview.png"
+                  alt=""
+                  height="50px"
+                  width="60px"
+                />&nbsp;&nbsp;GROW YOUR FANBASE&nbsp;&nbsp;
+                <img
+                  src="./assets/for-artists/marki-logo-removebg-preview.png"
+                  alt=""
+                  height="50px"
+                  width="60px"
+                />&nbsp;&nbsp;BUILD YOUR PROFILE&nbsp;&nbsp;
+                <img
+                src="./assets/for-artists/marki-logo-removebg-preview.png"
+                alt=""
+                height="50px"
+                width="60px"
+              />&nbsp;&nbsp;SHARE YOUR MUSIC&nbsp;&nbsp;
+              <img
+              src="./assets/for-artists/marki-logo-removebg-preview.png"
+              alt=""
+              height="50px"
+              width="60px"
+              />&nbsp;&nbsp;GET DISCOVERD&nbsp;&nbsp;
+             
+              </h4>
+            </marquee>
+          </div>
+        </div>
+      </div>
     </section>
+
+    
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
