--- a/for-Artists.html
+++ b/for-Artists.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>for Artists</title>
     <link rel="icon" type="image/x-icon" href="./assets/soundcloud-logo-.png" />
     <link
