--- a/for-Artists.html
+++ b/for-Artists.html
@@ -239,7 +239,6 @@
     </section>
 
     <section class="section-4">
-
       <div class="container-fluid">
         <div class="row d-flex">
           <div class="col">
@@ -252,17 +251,100 @@
               />
             </div>
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-12 pote-baby-margin ">
-            <h1 class="text-white pote-baby-text">“My earliest supporter was SoundCloud...my right hand man since day one”</h1>
+          <div class="col-lg-6 col-md-6 col-sm-12 pote-baby-margin">
+            <h1 class="text-white pote-baby-text">
+              “My earliest supporter was SoundCloud...my right hand man since
+              day one”
+            </h1>
             <h5 class="pt-3">
               <span class="text-white">Pote Baby</span>
             </h5>
             <p class="text-white">First on SoundCloud Class of '22 Artist</p>
           </div>
-        
         </div>
       </div>
+    </section>
 
+    <section class="section-5">
+      <div class="container-fluid ps-5">
+        <div class="row d-flex">
+          <div class="col">
+            <div class="image-0">
+              <img
+                class="img-fluid"
+                src="./assets/for-artists/image (3).gif"
+                alt=""
+                width="500px"
+              />
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12 get-paid-fairly pe-5">
+            <h1>Know who your top fans are and message them directly.</h1>
+            <p class="pt-3">
+              SoundCloud is the only streaming platform that allows you to
+              easily identify your top fans based on their listening and
+              engagement habits that support your music, and message them
+              directly via desktop or mobile.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="draw-line d-none d-sm-block"></div>
+
+      <div class="container-fluid ps-5">
+        <div class="row d-flex">
+          <div class="col">
+            <div class="image-0">
+              <img
+                class="img-fluid"
+                src="./assets/for-artists/image (4).gif"
+                alt=""
+                width="500px"
+              />
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12 get-paid-fairly pe-5">
+            <h1>Build your profile and share your brand.</h1>
+            <p class="pt-3">
+              Tell your story and let listeners fall in love with you by using
+              our expanded profile tools. Build your brand and express yourself
+              to give fans more insight into who you are and what moves you.
+              Repost and pin your favorite tracks in Spotlight, create playlists
+              with commentary, host AMAs, and send text and audio messages to
+              your top fans.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="draw-line d-none d-sm-block"></div>
+
+      <div class="container-fluid">
+        <div class="row d-flex">
+          <div class="col">
+            <div class="image-last">
+              <img
+                class="img-fluid"
+                src="./assets/for-artists/image (5).gif"
+                alt=""
+                width="500px"
+              />
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12 get-paid-last pe-5">
+            <h1>Get feedback on your tracks to perfect your sound.</h1>
+            <p class="pt-3">
+              Only on SoundCloud can fans directly give feedback to your tracks.
+              Send private links and post tracks for select groups of listeners
+              only. Then get their feedback directly, make edits to your track,
+              and replace the file without losing any stats.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section-6">
+      
     </section>
 
     <script
