--- a/for-Artists.html
+++ b/for-Artists.html
@@ -344,7 +344,25 @@
     </section>
 
     <section class="section-6">
+      <div class="container-fluid">
+        <div class="row d-flex">
+          <div class="col-lg-6 col-md-6 col-sm-12">
+            <h1 class="text-white last-stream">On SoundCloud, your streams and fans are worth more.</h1>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm--12 image-essky">
+            <img class="img-fluid" src="./assets/for-artists/image-ekkstacy.webp" width="400px" alt="">
+          </div>
+        </div>
+
+        <div class="row d-flex">
+          <div class="col">
+            <button type="button" class="btn btn-brand-9 btn-light btn-sm">Join SoundCloud</button>
+<button type="button" class="btn btn-brand-10 btn-outline-light btn-sm">Sign into your SoundCloud account</button>
+          </div>
+        </div>
+        
       
+      </div>
     </section>
 
     <script
